fixes element overlap

--- a/assets/scss/brigade-app.scss
+++ b/assets/scss/brigade-app.scss
@@ -543,7 +543,7 @@ svg {
 
 #community {
   position: absolute;
-  left: 12vw;
+  left: 17vw;
   right: 10vw;
   top: 200vh;
   width: 90vw;
